--- a/css/chill-spots.css
+++ b/css/chill-spots.css
@@ -8,8 +8,8 @@
   gap: 10px;
   align-self: stretch;
   border-radius: 40px;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/img/Rotterdam-park1.webp") center / cover no-repeat;
+  background: linear-gradient(rgba(148, 49, 49, 0.274), rgba(0, 0, 0, 0.199)),
+    url("/img/Joost.webp") center / cover no-repeat;
 }
 
 @media (max-width: 768px) {
@@ -60,7 +60,7 @@
 .image-block-2 {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   padding: 10px;
   gap: 20px;
   flex: 1;
