--- a/css/contact.css
+++ b/css/contact.css
@@ -162,9 +162,13 @@ form button {
 
 /* Responsive adjustments for smaller screens */
 @media (max-width: 768px) {
+  .contact-section {
+    padding: 40px 20px;
+  }
   .contact-container {
     flex-direction: column; /* Stack image and form vertically */
     gap: 20px;
+    flex-direction: column-reverse;
   }
 
   .picture,
