--- a/css/contact.css
+++ b/css/contact.css
@@ -112,8 +112,8 @@ legend {
 /* Larger custom radio buttons */
 form input[type="radio"] {
   appearance: none;
-  width: 24px; /* Increased width */
-  height: 24px; /* Increased height */
+  width: 24px;
+  height: 24px;
   border: 2px solid #023020;
   border-radius: 50%;
   background-color: #fff;
@@ -137,7 +137,7 @@ form input[type="radio"]:checked::before {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); /* Centers the dot within the radio */
+  transform: translate(-50%, -50%); /* Centers the dot within the radio */     /** how this work it calculate top and bottom equally and then right and left equally **/
 }
 
 .form-group {
