../ for images in CSS
I'm trying to see if this will display the images in GITHUB. Not sure yet. if it's not possible maybe I should use relative path E.G being (img/imagenam.jpg)

--- a/css/chill-spots.css
+++ b/css/chill-spots.css
@@ -9,7 +9,7 @@
   align-self: stretch;
   border-radius: 40px;
   background: linear-gradient(rgba(148, 49, 49, 0.274), rgba(0, 0, 0, 0.199)),
-    url("/img/Joost.webp") center / cover no-repeat;
+    url("../img/Joost.webp") center / cover no-repeat;
 }
 
 @media (max-width: 768px) {
