--- a/css/quick-breaks.css
+++ b/css/quick-breaks.css
@@ -9,7 +9,7 @@
   align-self: stretch;
   border-radius: 40px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/img/Rotterdam-park1.webp") center / cover no-repeat;
+    url("../img/Rotterdam-park1.webp") center / cover no-repeat;
 }
 
 @media (max-width: 768px) {
