--- a/css/wellbeing-tips.css
+++ b/css/wellbeing-tips.css
@@ -9,7 +9,7 @@
   align-self: stretch;
   border-radius: 40px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/img/wellbeing-tips-header.webp") center / cover no-repeat;
+    url("../img/wellbeing-tips-header.webp") center / cover no-repeat;
 }
 
 @media (max-width: 768px) {
