--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@
   align-self: stretch;
   border-radius: 40px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./img/hero-banner.webp") center / cover no-repeat;
+    url("../img/hero-banner.webp") center / cover no-repeat;
 }
 
 /* Buttons layout */
