--- a/css/thank-you-page.css
+++ b/css/thank-you-page.css
@@ -28,3 +28,11 @@
       padding: 80px 0px;
     }
   }
+
+  h1 {
+    padding: 120px 0px 0px 40px;
+  }
+
+  a.hero-button {
+    margin: 40px 0px 0px 0px;
+  }
