--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -43,6 +43,8 @@ p {
   font-style: normal;
   font-weight: 400;
   line-height: 1.56; /* Maintain the 156% line height */
+  letter-spacing: 0.5px;
+  word-spacing: 0.5px;
 }
 
 li {
