--- a/css/thank-you-page.css
+++ b/css/thank-you-page.css
@@ -30,9 +30,20 @@
   }
 
   h1 {
-    padding: 120px 0px 0px 40px;
+    padding: 120px 0px 40px 0px;
   }
 
   a.hero-button {
     margin: 40px 0px 0px 0px;
+  }
+
+  .connect-with-us {
+    text-align: center;
+    padding: 50px 0px;
+  }
+
+  .connect-with-us address{
+    padding: 20px 0px;
+    font-size: 50px;
+    gap: 20px;
   }
