--- a/css/general-styles.css
+++ b/css/general-styles.css
@@ -55,6 +55,17 @@ li {
   line-height: 1.56;
 }
 
+a:link {
+  color: #023020;
+  font-weight: 400;
+}
+
+a:hover {
+  color: #023020;
+  font-weight: 700;
+}
+
+
 .hero-button {
   font-family: Montserrat, sans-serif;
   font-size: 1.25rem; /* 20px / 16 = 1.25rem */
