Assessment requirements update 4
Validating with HTML validator (w3 validator)
errors:
1. Error: Stray end tag input.

remove embeded style (<script>) add it in a separate folder.

Fixed home page CTA image not showing

add table.

remove certain things.

--- a/css/contact.css
+++ b/css/contact.css
@@ -167,6 +167,30 @@ form input[type="submit"]:hover {
   color: #a4c694;
 }
 
+
+/** TABLE **/
+
+.table {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  table-layout: fixed;
+}
+
+.table table, th {
+  border:1px solid black;
+  padding: 20px 20px;
+}
+
+.table tr:nth-child(even) {
+  background-color: #CFF;
+}
+
+.table tr:nth-child(odd) {
+  background-color: #FFF;
+}
+
+
 /* Responsive adjustments for smaller screens */
 @media (max-width: 768px) {
   .contact-section {
