--- a/css/styles.css
+++ b/css/styles.css
@@ -137,11 +137,6 @@
     justify-content: space-between;
   }
 
-  /* Stack navigation links vertically */
-  .navigation-links {
-    flex-direction: column;
-  }
-
   /* Display hamburger icon */
   .menu-toggle-icon {
     display: block;
@@ -152,45 +147,10 @@
   /* Hide navigation by default, set up overlay styling */
   .navigation-links-wrapper {
     display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1000;
-    transition: opacity 0.3s ease;
-  }
-
-  /* Display navigation when checkbox is checked */
-  .toggle-checkbox:checked + .menu-toggle-icon + .navigation-links-wrapper {
-    display: flex;
-  }
-
-  /* Style navigation items in overlay */
-  .navigation-links-wrapper .navigation-item {
-    color: #000;
-    font-size: 24px;
-    margin: 15px 0;
-    text-decoration: none;
-  }
-
-  /* Close button styling */
-  .close-menu-label {
-    display: block;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    color: #000;
-    font-size: 24px;
-    cursor: pointer;
   }
 }
 
-/* Additional adjustments for 768px and below */
+/* media queries for 768px */
 @media (max-width: 768px) {
   .hero-section {
     display: flex;
@@ -219,17 +179,6 @@
     display: none;
   }
 
-  /* Show navigation when checkbox is checked */
-  .toggle-checkbox:checked + .menu-toggle-icon + .navigation-links-wrapper {
-    display: flex;
-    flex-direction: column;
-  }
-
-  /* Close button styling */
-  .close-menu-label {
-    display: block;
-  }
-
   .hero-heading {
     font-size: 45px;
   }
@@ -242,54 +191,7 @@
     flex-direction: column;
     gap: 15px;
   }
-
-  /* Set up overlay styling */
-  .navigation-links-wrapper {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: 1000;
-    transition: opacity 0.3s ease;
-  }
-
-  /* Display overlay when checkbox is checked */
-  .toggle-checkbox:checked + .menu-toggle-icon + .navigation-links-wrapper {
-    display: flex;
-  }
-
-  /* Style navigation items in overlay */
-  .navigation-links-wrapper .navigation-item {
-    color: #000;
-    font-size: 24px;
-    margin: 15px 0;
-    text-decoration: none;
-  }
-
-  /* Close button styling */
-  .close-menu-label {
-    display: block;
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    color: #000;
-    font-size: 24px;
-    cursor: pointer;
-  }
-
-  /* Stack navigation links and add gap */
-  .navigation-links {
-    flex-direction: column;
-    gap: 40px;
-  }
 }
-
 
 
 /* Section introduction Container */
@@ -445,6 +347,7 @@ article {
 }
 
 /** Split Container for both split right and split left **/
+
 .split-in-2 {
   display: flex;
   width: 100%;
@@ -557,7 +460,7 @@ article {
   align-self: stretch;
   border-radius: 40px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/img/scenery.webp") center / cover no-repeat;
+    url("../img/scenery.webp") center / cover no-repeat;
 }
 
 .CTA-text-box {
@@ -703,20 +606,18 @@ article {
   }
 }
 
-
-
-/** COOKIES **/
-/* Centered Box Styling */
 .centered-box {
   width: 1000px;
-  height: 500px;
+  height: auto;
   padding: 20px;
   background-color: #a4c694;
   color: #023020;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
