--- a/css/contact.css
+++ b/css/contact.css
@@ -112,7 +112,6 @@ legend {
 
 /* Larger custom radio buttons */
 form input[type="radio"] {
-  appearance: none;
   width: 24px;
   height: 24px;
   border: 2px solid #023020;
@@ -121,24 +120,6 @@ form input[type="radio"] {
   position: relative;
   cursor: pointer;
   margin-right: 8px;
-}
-
-form input[type="radio"]:checked {
-  background-color: #fff; /* Checked background color */
-  border-color: #023020;
-}
-
-form input[type="radio"]:checked::before {
-  content: "";
-  display: block;
-  width: 12px; /* Adjusted inner dot size */
-  height: 12px;
-  background-color: #023020; /* Inner dot color */
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); /* Centers the dot within the radio */     /** how this work it calculate top and bottom equally and then right and left equally **/
 }
 
 .form-group {
@@ -169,6 +150,7 @@ form input[type="submit"]:hover {
 
 
 /** TABLE **/
+/* a table for the assessment */
 
 .table {
   width: 100%;
@@ -182,12 +164,31 @@ form input[type="submit"]:hover {
   padding: 20px 20px;
 }
 
+.table table {
+  border-radius: 40px;
+  border-spacing: 10px;
+}
+
+.table th {
+  border-radius: 20px;
+  gap: 10px;
+}
+
 .table tr:nth-child(even) {
   background-color: #CFF;
 }
 
 .table tr:nth-child(odd) {
   background-color: #FFF;
+}
+
+.cat-vibing {
+  float: right;
+  margin-left: 20px;
+}
+
+.cat-dancing {
+  border-radius: 40px;
 }
 
 
@@ -205,5 +206,15 @@ form input[type="submit"]:hover {
   .picture,
   .form {
     flex: 1 1 100%; /* Full width for each on small screens */
+  }
+
+  .table {
+    flex-direction: column;
+    padding: 0px 20px;
+  }
+
+  .cat-vibing {
+    float: none;
+    margin: 20px auto;
   }
 }
