Assessment requirements update 6
Uses property text-transform in uppercase.
Uses relative units in css (em, rem). In this case I added em

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,14 @@ article {
   font-size: 35px;
 }
 
+.introduction p {
+  font-size: 1.25em;
+}
+
+.introduction .inner-introduction article h2 {
+  text-transform: uppercase;
+}
+
 @media (max-width: 768px) {
   .introduction {
     padding: 0px 20px;
